--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
                             <img class="img-fluid" src="assets/img/portfolio/covid-19.png" alt="" />
                         </div>
                     </div>
+                    <div class="col-md-6 col-lg-4 mt-5 mb-md-0">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal8">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/spotify.png" alt="" />
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -599,7 +607,41 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/covid-19.png" alt="" />
                                     <h4>Live Link: <a target="_blank" href="https://covid19-tracker90.web.app/">https://covid19-tracker90.web.app/</a></h4>
-                                    <p class="mb-5">This website called Covid-19 Tracker. This website I have used some beautiful technology which is React, Firebase, Material-UI and etc. This website update data every day after 12pm.</p>
+                                    <p class="mb-5">This website basically made for  Covid-19 Tracker. This website I have used some beautiful technology which is React, Firebase, Material-UI and etc. This website update data every day after 12pm.</p>
+                                    <button class="btn btn-primary" data-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-labelledby="portfolioModal8Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                    <div class="modal-body text-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Spotify Front-end clone</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/spotify.png" alt="" />
+                                    <h4>Live Link: <a target="_blank" href="https://spotify-clone90.web.app/">https://spotify-clone90.web.app/</a></h4>
+                                    <p class="mb-5">This website basically made like Spotify frontend clone. This website I have used some beautiful technology which is React, Firebase, Material-UI and etc.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
